Put in a route and a welcome index template

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,4 @@
 <p>
   The time is now: <%= Time.now %>
 </p>
-<p>Direct all feature requests to at fricjan@yahoo.com</p>
+<p>Direct all feature requests to Fric at fricjan@yahoo.com</p>
